[tool.poetry]
name = "flask-mongodb"
version = "0.1.0"
description = ""
authors = ["Anton Shefer <rezajkee@mail.ru>"]
readme = "README.md"
packages = [{include = "flask_mongodb"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
pymongo = {extras = ["srv"], version = "^4.3.3"}
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
